Adds additional stylesheet to index.