@@ -1,5 +1,6 @@
 package com.pizzashop.controllers;
 
+import com.pizzashop.entities.PizzaSizeEnum;
 import com.pizzashop.services.MenuItemService;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Controller;
@@ -7,6 +8,7 @@ import org.springframework.ui.Model;
 import org.springframework.web.bind.annotation.GetMapping;
 
 import java.util.Collections;
+import java.util.List;
 
 @Controller
 public class ViewController {
@@ -24,10 +26,11 @@ public class ViewController {
         model.addAttribute("heading", "Pizza & Pasta");
         model.addAttribute("secondaryHeading", "RISTORANTE");
         model.addAttribute("pageTitle", "Pizza & Pasta - Home");
-        model.addAttribute("additionalStyles", Collections.emptyList());
+        model.addAttribute("additionalStyles", List.of("/styles/landing.css"));
         model.addAttribute("address", true);
 
         model.addAttribute("specials", menuItemService.findRandomMenuItems());
+        model.addAttribute("smallPizzaPrice", menuItemService.findMenuItemByName(PizzaSizeEnum.SMALL.getPizzaName()));
 
         return "index";
     }
